--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -12,15 +12,28 @@ services:
 
       RACK_ENV: test
       DEBUG_KEY: changeme
-      LOAD_CONGRESS: "false"
+      LOAD_CONGRESS: "true"
+    ports:
+      - "3001:3001"
 
   test_db:
     image: mysql:5.7
     environment:
       MYSQL_ROOT_PASSWORD: changeme
-      MYSQL_DATABASE: phantom_dc_test
-      MYSQL_USER: phantom_dc
-      MYSQL_PASSWORD: changeme
+      MYSQL_TEST_HOST: test_db
+      MYSQL_TEST_USER: phantom_dc
+      MYSQL_TEST_PASSWORD: changeme
+    ports:
+      - "3306:3306"
+  
   sut:
     build: .
-    command: rake rspec spec
+    depends_on:
+      - test_app
+      - test_db
+    command: test.sh
+    environment:
+      MYSQL_TEST_HOST: test_db
+      MYSQL_TEST_USER: phantom_dc
+      MYSQL_TEST_PASSWORD: changeme
+      RACK_ENV: test
