Adding sut service for docker hub.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -21,3 +21,6 @@ services:
       MYSQL_DATABASE: phantom_dc_test
       MYSQL_USER: phantom_dc
       MYSQL_PASSWORD: changeme
+  sut:
+    build: .
+    command: bundle exec rake spec
